# issuectl

./: Cargo.toml  README.md
docs/: project-outline.md  technical-implementation.md
docs/skills/issuectl-cli/: SKILL.md
migrations/: 0001_init.sql  0002_project_item_prefix.sql
src/: app.rs  cli.rs  db.rs  domain.rs  error.rs  git.rs  lib.rs  main.rs  output.rs  repo.rs  services.rs
src/ui/: input.rs  mod.rs
tests/: cli.rs  gaps.rs
